--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.jpa.show-sql=true
-#spring.h2.console.enabled=true
-spring.mvc.throw-exception-if-no-handler-found=true
-spring.resources.add-mappings=false
+spring.h2.console.enabled=true
+#spring.mvc.throw-exception-if-no-handler-found=true
+#spring.resources.add-mappings=false
 #server.error.include-message=always
 #server.error.include-binding-errors=always
-server.error.include-message: always
-server.error.include-binding-errors: always
-server.error.include-stacktrace: on_trace_param
-server.error.include-exception: false
+#server.error.include-message: always
+#server.error.include-binding-errors: always
+#server.error.include-stacktrace: on_trace_param
+#server.error.include-exception: false
