--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,18 @@
 			<artifactId>commons-lang3</artifactId>
 <!--			<version>3.9</version>-->
 		</dependency>
-<!--		<dependency>-->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>3.12.4</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+		<!--		<dependency>-->
 <!--			<groupId>org.hibernate</groupId>-->
 <!--			<artifactId>hibernate-validator</artifactId>-->
 <!--			<version>7.0.1.Final</version>-->
